test(tests): 添加测试代码以验证共轭梯度求解器的功能

--- a/CmakeLists.txt
+++ b/CmakeLists.txt
@@ -9,10 +9,12 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 # path config
 include_directories(${PROJECT_SOURCE_DIR}/include)
 aux_source_directory(${PROJECT_SOURCE_DIR}/src SRC_LIST)
+aux_source_directory(${PROJECT_SOURCE_DIR}/tests TEST_LIST)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/bin)
 
 # excutable
 add_executable(
-    hpcg
+    test_hpcg
     ${SRC_LIST}
+    ${TEST_LIST}
 )
