--- a/CmakeLists.txt
+++ b/CmakeLists.txt
@@ -6,6 +6,9 @@ project(MY_HPCG_PROJECT)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+# package
+find_package(OpenMP REQUIRED)
+
 # path config
 include_directories(${PROJECT_SOURCE_DIR}/include)
 aux_source_directory(${PROJECT_SOURCE_DIR}/src SRC_LIST)
@@ -18,3 +21,5 @@ add_executable(
     ${SRC_LIST}
     ${TEST_LIST}
 )
+# link
+target_link_libraries(test_hpcg PUBLIC OpenMP::OpenMP_CXX)
